queue: Don't hold the queue mutex while doing serialized queries downstream

https://bugzilla.gnome.org/show_bug.cgi?id=702520